# llm-inference

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: llama3-8b.yaml  qwen3-0.6b.yaml  qwen3-8b-gptq.yaml
deploy/: README.md
deploy/k8s/: deployment.yaml  hpa.yaml  service.yaml
deploy/monitoring/: prometheus.yml
deploy/monitoring/grafana/: vllm-dashboard.json
docker/: Dockerfile  docker-compose.yml
examples/: 01_quickstart.py  02_logprobs.py  03_continuous_batching.py  04_prefix_caching.py  05_thinking_mode.py  colab_demo.ipynb
scripts/: benchmark.py  download_model.py  serve.sh
src/llm_inference/: __init__.py  client.py  config.py  metrics.py
tests/: conftest.py  mock_server.py  test_config.py  test_integration.py  test_smoke.py
